--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -7,16 +7,19 @@
 	<packaging>pom</packaging>
 
 	<modules>
+	    
+		<module>babasport-front</module>
 		<module>babasport-back</module>
 		<module>babasport-core</module>
-		<module>babasport-front</module>
+		
 	</modules>
 
 	<!-- 设置统一控制版本 -->
 	<properties>
 		<java-version>1.7</java-version>
+		<hamcrest-version>1.3</hamcrest-version>
 		<junit-version>4.8.2</junit-version>
-		<org.springframework-version>3.2.0.RELEASE</org.springframework-version>
+		<org.springframework-version>4.0.5.RELEASE</org.springframework-version>
 		<jackson-mapper-asl-version>1.9.12</jackson-mapper-asl-version>
 		<jackson-core-asl-version>1.9.12</jackson-core-asl-version>
 		<mysql-connector-java-version>5.1.8</mysql-connector-java-version>
@@ -44,6 +47,13 @@
 	<!-- 设置统一依赖管理、不强行依赖 -->
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-all</artifactId>
+				<version>${hamcrest-version}</version>
+			</dependency>
+
+
 			<!-- with junit4.8.2 -->
 			<dependency>
 				<groupId>junit</groupId>
